# meringue

./: CMakeLists.txt  README.md
cmake/: clang-tidy.helper.cmake  lto.helper.cmake  test.helper.cmake
meringue_client/: CMakeLists.txt
meringue_client/src/: main.cc  meringue_client.cc  meringue_client.hh
meringue_common/: CMakeLists.txt
meringue_common/include/: meringue_hash.hh  meringue_optional.hh  meringue_variant.hh
meringue_common/src/: header_check.cc
meringue_daemon/: CMakeLists.txt
meringue_daemon/src/: main.cc
meringue_protocol/: CMakeLists.txt
meringue_protocol/include/: meringue_message.hh  meringue_message_deserialize.hh  meringue_message_serialize.hh
meringue_protocol/src/: meringue_header.cc  meringue_header.hh  meringue_message_deserialize.cc  meringue_message_serialize.cc
meringue_scheduler/: CMakeLists.txt
meringue_scheduler/src/: main.cc  meringue_configuration_paths.hh
